pxc/tests/test_003_interface/interf_inh4.px
public namespace interf_inh4;
import core::common -;

pure interface ifoo {
  function void foo();
}

interface ibar <ifoo> { // error: threading attribute
  function void bar();
}

function void t1()
{
}

t1();
